--- a/index.html
+++ b/index.html
@@ -97,34 +97,56 @@
               Skills
             </div>
             Farming:
-            <span class = "FarmingStatsLevel" id = "FarmingLevel">
+            <span class = "FarmingStatsLevel" id = "FarmingStatsLevel">
               0
             </span>
             <br>
             Woodcutting:
-            <span class = "WoodcuttingStatsLevel" id = "WoodcuttingLevel">
+            <span class = "WoodcuttingStatsLevel" id = "WoodcuttingStatsLevel">
               0
             </span>
             <br>
             Combat:
-            <span class = "CombatStatsLevel" id = "CombatLevel">
+            <span class = "CombatStatsLevel" id = "CombatStatsLevel">
               0
             </span>
             <br>
             Fishing:
-            <span class = "FishingStatsLevel" id = "FishingLevel">
+            <span class = "FishingStatsLevel" id = "FishingStatsLevel">
               0
             </span>
             <br>
             Crafting:
-            <span class = "FishingStatsLevel" id = "FishingLevel">
+            <span class = "CraftingStatsLevel" id = "CraftingStatsLevel">
               0
             </span>
             <br>
             Research:
-            <span class = "ResearchStatsLevel" id = "ResearchLevel">
+            <span class = "ResearchStatsLevel" id = "ResearchStatsLevel">
               0
             </span>
+          </div>
+          <br>
+          <div class = "WanderingStatsDiv" id = "WanderingStatsDiv">
+            <div class = "WanderingStatsTitle" id = "WanderingStatsTitle">
+              Wandering
+            </div>
+            Times Wandered:
+            <span class = "TimesWanderedStat" id = "TimesWanderedStat">
+              0
+            </span>
+          </div>
+          <br>
+          <div class = "MiscStatsDiv" id = "MiscStatsDiv">
+            <div class = "MiscStatsTitle" id = "MiscStatsTitle">
+              Other Stats
+            </div>
+            Playtime:
+            <span class = "PlaytimeStat" id = "PlaytimeStat">
+              0
+            </span>
+            <br>
+            Version: 0.3.0
           </div>
         </div>
       </div>
